<resources>
    <string name="app_name">Travel Planner</string>
    <string name="action_settings">Settings</string>
    
    <!-- Navigation titles -->
    <string name="title_map">Map</string>
    <string name="title_itinerary">Itinerary</string>
    <string name="title_camera">Camera</string>
    <string name="title_diary">Travel Diary</string>
    <string name="title_fitness">Fitness</string>
    
    <!-- Map Fragment -->
    <string name="search_location">Search for a location</string>
    <string name="route_planning">Plan Route</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="stop_navigation">Stop Navigation</string>
    <string name="navigation_in_progress">Navigation in progress</string>
    <string name="clear_all_markers">Clear All Markers</string>
    <string name="add_to_itinerary">Add to Itinerary</string>
    <string name="add_to_map_only">Add to Map Only</string>
    <string name="remove_from_map">Remove from Map</string>
    <string name="enter_location_name">Enter a name for this location:</string>
    <string name="location_added_to_itinerary">Added %s to itinerary</string>
    <string name="location_removed_from_map">Removed %s from map</string>
    <string name="long_press_hint">Long press on map to add locations to your itinerary</string>
    <string name="navigation_hint">Tap anywhere on the map to start navigation</string>
    <string name="navigation_started">Navigation started</string>
    <string name="navigation_stopped">Navigation stopped</string>
    <string name="navigating_to">Navigating to %s</string>
    <string name="current_location">Current Location</string>
    <string name="destination">Destination</string>
    <string name="navigation_mode_on">Navigation Mode: ON</string>
    <string name="navigation_mode_off">Navigation Mode: OFF</string>
    <string name="navigation_mode_hint_on">Navigation mode ON - Tap map to navigate</string>
    <string name="navigation_mode_hint_off">Navigation mode OFF - Tap map to explore</string>
    <string name="toggle_navigation_mode">Use the navigation button to toggle navigation mode</string>
    <string name="select_travel_mode">Select Travel Mode</string>
    <string name="travel_mode_walking">Walking</string>
    <string name="travel_mode_bicycling">Bicycling</string>
    <string name="travel_mode_driving">Driving</string>
    <string name="travel_mode_transit">Public Transit</string>
    <string name="optimizing_route">Optimizing route...</string>
    <string name="route_optimized">Route optimized! Improvement: %s</string>
    <string name="optimize_route">Optimize Route</string>
    <string name="optimize_route_mode">Route Optimization Mode</string>
    <string name="route_optimization_complete">Route Optimization Complete</string>
    <string name="select_locations_for_optimization">Please select locations to optimize</string>
    <string name="optimization_mode_help">Tap markers to select route points, Green=Selected, Red=Unselected</string>
    <string name="add_optimized_route_to_itinerary">Add to Itinerary</string>
    <string name="show_route_only">Show Route Only</string>
    
    <!-- Itinerary Fragment -->
    <string name="my_itinerary">My Itinerary</string>
    <string name="add_location">Add Location</string>
    <string name="search_hotels">Search Hotels</string>
    <string name="search_flights">Search Flights</string>
    <string name="distance">Distance</string>
    <string name="travel_time">Travel Time</string>
    
    <!-- Camera Fragment -->
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="identify_landmark">Identify Landmark</string>
    <string name="processing">Processing...</string>
    <string name="landmark_identified">Landmark Identified</string>
    <string name="no_landmark_found">No landmark found in image</string>
    
    <!-- Fitness Fragment -->
    <string name="steps_today">Steps Today</string>
    <string name="distance_walked">Distance Walked</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="step_counter_unavailable">Step counter not available on this device</string>
    
    <!-- General -->
    <string name="error_occurred">An error occurred</string>
    <string name="permission_required">Permission required</string>
    <string name="location_permission_required">Location permission is required for this feature</string>
    <string name="camera_permission_required">Camera permission is required for this feature</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>